# GymTracker

./: .gitignore  Cargo.toml  Justfile  backlog.txt
api/: Cargo.toml
api/src/: auth.rs  lib.rs  user.rs
db/: Cargo.toml
db/src/: training.rs  user.rs
entity/: Cargo.toml
entity/src/: lib.rs  training.rs  user.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/user/: auth.rs  mod.rs  routes.rs
