[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = {workspace = true}
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
] }
entity ={ path = "../entity" }
chrono = "0.4.41"
